# teparsing

./: .gitignore  NOTICE.md  README.md  meson.build
scripts/: check-headers.sh  coverage.sh  generate-header.sh  premeson.sh  run_cppcheck.sh
src/: call_all.hh  call_any.hh  exceptions.hh  fold_tuple.hh  function_traits.hh  meson.build  operators.hh  parsing.hh  string_utils.hh  traits.hh
src/combinator/: choice.hh  discard.hh  except.hh  many.hh  operators.hh  sequence.hh
src/parser/: all.hh  any.hh  attempt.hh  define.hh  fix.hh  handle.hh  log.hh  option.hh  parsers.hh  ref.hh  rename.hh  separate_by.hh  some.hh  strict.hh  tokenise.hh
src/predicate/: operators.hh  predicates.hh
test/: meson.build
test/parsing/: functional.cc  main.cc  meson.build  parsers.cc  predicates.cc  strings.cc
test/predicates/: main.cc  meson.build
test/trivial/: meson.build  trivial.cc
